@@ -6,8 +6,9 @@
 }
 
 \usage{
-read.gdsn(node, start=NULL, count=NULL, simplify=c("auto", "none", "force"),
-    .useraw=FALSE)
+read.gdsn(node, start=NULL, count=NULL,
+    simplify=c("auto", "none", "force"), .useraw=FALSE, .value=NULL,
+    .val.replaced=NULL)
 }
 \arguments{
     \item{node}{an object of class \code{\link{gdsn.class}}, a GDS node}
@@ -20,6 +21,13 @@ read.gdsn(node, start=NULL, count=NULL, simplify=c("auto", "none", "force"),
         if possible; \code{"force"}, the result is forced to be a vector}
     \item{.useraw}{use R RAW storage mode if integers can be stored in a byte,
         to reduce memory usage}
+    \item{.value}{a vector of values to be replaced in the original data array,
+        or NULL for nothing}
+    \item{.val.replaced}{a vector of values after replacing, or NULL for
+        nothing; \code{length(.val.replaced)} should be one or
+        \code{length(.value)}; if \code{length(.val.replaced)} =
+        \code{length(.value)}, it is a mapping from \code{.value} to
+        \code{.val.replaced}}
 }
 \details{
     \code{start}, \code{count}: the values in data are taken to be those
@@ -62,7 +70,12 @@ read.gdsn(index.gdsn(f, "matrix"), start=c(2,2), count=c(-1,1),
 # [1,]    5
 # [2,]    6
 
+read.gdsn(index.gdsn(f, "matrix"), start=c(2,2), count=c(-1,3))
+read.gdsn(index.gdsn(f, "matrix"), start=c(2,2), count=c(-1,3),
+    .value=c(12,5), .val.replaced=NA)
 
+
+# close the GDS file
 closefn.gds(f)
 
 
